Revert "CELDEV-1259 - add mandatory dependencies for MandatoryXClasses (#382)" (#384)
This reverts commit 3c36cc73a5753e22179712682e174fce881b3384.