@@ -19,6 +19,7 @@
  */
 package com.celements.mandatory;
 
+import java.util.Collections;
 import java.util.List;
 
 import org.apache.commons.lang.StringUtils;
@@ -63,7 +64,7 @@ public class Robots_TXT implements IMandatoryDocumentRole {
 
   @Override
   public List<String> dependsOnMandatoryDocuments() {
-    return List.of("celements.mandatory.MandatoryXClasses");
+    return Collections.emptyList();
   }
 
   @Override
